add pages and styles

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple web</title>
-  <link rel="stylesheet" href="./css/index.css">
+  <title>Home | Simpleweb</title>
+  <link rel="stylesheet" href="./src/css/index.css">
 </head>
 
 <body>
@@ -15,22 +15,19 @@
       <button class="header__btn">Menu</button>
       <ul class="header__menu">
         <li class="header__item">
-          <a href="#" class="header__link">Home</a>
+          <a href="/src/pages/index.html" class="header__link">Home</a>
         </li>
         <li class="header__item">
-          <a href="#" class="header__link">About Us</a>
+          <a href="/src/pages/about.html" class="header__link">About Us</a>
         </li>
         <li class="header__item">
-          <a href="#" class="header__link">News</a>
+          <a href="/src/pages/news.html" class="header__link">News</a>
         </li>
         <li class="header__item">
-          <a href="#" class="header__link">Gallery</a>
+          <a href="/src/pages/gallery.html" class="header__link">Gallery</a>
         </li>
         <li class="header__item">
-          <a href="#" class="header__link">Blog</a>
-        </li>
-        <li class="header__item">
-          <a href="#" class="header__link">Contacts</a>
+          <a href="/src/pages/contacts.html" class="header__link">Contacts</a>
         </li>
       </ul>
     </nav>
@@ -38,9 +35,9 @@
   </header>
   <main class="main">
     <section class="intro container">
-      <img src="./images/intro.jpg" alt="image" class="intro__img">
+      <img src="./src/images/intro.jpg" alt="image" class="intro__img">
       <div class="intro__wrapper wrapper">
-        <div class="intro__headings">
+        <div class="intro__headings headings">
           <h1 class="intro__h1">SimpleWeb</h1>
           <h2 class="intro__h2">Web Development Studio</h2>
         </div>
@@ -53,7 +50,7 @@
     </section>
     <section class="welcome container">
       <div class="welcome__wrapper wrapper">
-        <div class="welcome__headings">
+        <div class="welcome__headings headings">
           <h2 class="welcome__h2">Welcome</h2>
         </div>
         <p class="welcome__paragraph">We are a wacky web development squad on a mission to conquer the digital realm
@@ -68,33 +65,33 @@
     </section>
     <section class="gallery container">
       <div class="gallery__wrapper wrapper">
-        <img src="./images/gallery-1.jpg" alt="image" class="gallery__img">
-        <div class="gallery__headings">
+        <img src="./src/images/gallery-1.jpg" alt="image" class="gallery__img">
+        <div class="gallery__headings headings">
           <h2 class="gallery__h2">Our Projects</h2>
         </div>
       </div>
       <div class="gallery__wrapper wrapper">
-        <img src="./images/gallery-2.jpg" alt="image" class="gallery__img">
-        <div class="gallery__headings">
+        <img src="./src/images/gallery-2.jpg" alt="image" class="gallery__img">
+        <div class="gallery__headings headings">
           <h2 class="gallery__h2">Satisfied Clients</h2>
         </div>
       </div>
       <div class="gallery__wrapper wrapper">
-        <img src="./images/gallery-3.jpg" alt="image" class="gallery__img">
-        <div class="gallery__headings">
+        <img src="./src/images/gallery-3.jpg" alt="image" class="gallery__img">
+        <div class="gallery__headings headings">
           <h2 class="gallery__h2">Inspiring Designs</h2>
         </div>
       </div>
       <div class="gallery__wrapper wrapper">
-        <img src="./images/gallery-4.jpg" alt="image" class="gallery__img">
-        <div class="gallery__headings">
+        <img src="./src/images/gallery-4.jpg" alt="image" class="gallery__img">
+        <div class="gallery__headings headings">
           <h2 class="gallery__h2">Team in Action</h2>
         </div>
       </div>
     </section>
     <section class="contact container">
       <div class="contact__wrapper wrapper">
-        <div class="contact__headings">
+        <div class="contact__headings headings">
           <h2 class="contact__h2">Contact Us</h2>
         </div>
         <form class="contact__form">
@@ -108,9 +105,9 @@
     </section>
   </main>
   <footer class="footer container">
-    <img src="./images/contacts.jpg" alt="image" class="footer__img">
+    <img src="./src/images/contacts.jpg" alt="image" class="footer__img">
     <div class="footer__wrapper wrapper">
-      <div class="footer__headings">
+      <div class="footer__headings headings">
         <h2 class="footer__h2">Contacts</h2>
       </div>
       <ul class="footer__list">
