--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home | Simpleweb</title>
   <link rel="stylesheet" href="./src/css/index.css">
+  <script defer src="src/javascript/menu.js"></script>
 </head>
 
 <body>
