--- a/src/pages/contacts.html
+++ b/src/pages/contacts.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacts | SimpleWeb</title>
   <link rel="stylesheet" href="../css/index.css">
+  <script defer src="src/javascript/menu.js"></script>
 </head>
 
 <body>
